lots of changes

--- a/documents/GProtation.bib
+++ b/documents/GProtation.bib
@@ -1,4 +1,4 @@
-@ARTICLE{Aigrain2015,
+@ARTICLE{Aigrain2015b,
    author = {{Aigrain}, S. and {Hodgkin}, S.~T. and {Irwin}, M.~J. and {Lewis}, J.~R. and
 	{Roberts}, S.~J.},
     title = "{Precise time series photometry for the Kepler-2.0 mission}",
@@ -128,26 +128,6 @@ archivePrefix = "arXiv",
     pages = {3147-3158},
       doi = {10.1111/j.1365-2966.2011.19960.x},
    adsurl = {http://adsabs.harvard.edu/abs/2012MNRAS.419.3147A},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
-}
-
-@ARTICLE{Aigrain2015,
-   author = {{Aigrain}, S. and {Llama}, J. and {Ceillier}, T. and {Chagas}, M.~L.~d. and
-	{Davenport}, J.~R.~A. and {Garc{\'{\i}}a}, R.~A. and {Hay}, K.~L. and
-	{Lanza}, A.~F. and {McQuillan}, A. and {Mazeh}, T. and {de Medeiros}, J.~R. and
-	{Nielsen}, M.~B. and {Reinhold}, T.},
-    title = "{Testing the recovery of stellar rotation signals from Kepler light curves using a blind hare-and-hounds exercise}",
-  journal = {\mnras},
-archivePrefix = "arXiv",
-   eprint = {1504.04029},
- primaryClass = "astro-ph.SR",
- keywords = {methods: data analysis, techniques: photometric, surveys, stars: rotation, starspots},
-     year = 2015,
-    month = jul,
-   volume = 450,
-    pages = {3211-3226},
-      doi = {10.1093/mnras/stv853},
-   adsurl = {http://adsabs.harvard.edu/abs/2015MNRAS.450.3211A},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -462,6 +442,16 @@ archivePrefix = "arXiv",
       doi = {10.1086/670067},
    adsurl = {http://adsabs.harvard.edu/abs/2013PASP..125..306F},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+Goodman, J. & Weare, J., 2010, Comm. App. Math. Comp. Sci., 5, 65
+@ARTICLE{Goodman2010,
+   author = {{Goodman, J.} and Weare, J.},
+    title = "{Ensemble samplers with affine invariance}",
+  journal = {Communications in Applied Mathematics and Computational Science},
+     year = 2010,
+   volume = 5,
+    pages = {1},
 }
 
 @ARTICLE{Hogg2010,
@@ -1759,7 +1749,7 @@ archivePrefix = "arXiv",
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
-@ARTICLE{Aigrain2015b,
+@ARTICLE{Aigrain2015,
    author = {{Aigrain}, S. and {Llama}, J. and {Ceillier}, T. and {Chagas}, M.~L.~d. and
 	{Davenport}, J.~R.~A. and {Garc{\'{\i}}a}, R.~A. and {Hay}, K.~L. and
 	{Lanza}, A.~F. and {McQuillan}, A. and {Mazeh}, T. and {de Medeiros}, J.~R. and
@@ -2434,7 +2424,7 @@ archivePrefix = "arXiv",
  keywords = {Exoplanet detection, Stellar activity of Sun-like stars, Sunspots, faculae/plage, Super-Earths, Exoplanet characterisation, Radial-velocity technique},
    school = {University of St Andrews},
      year = 2015,
-    month = November,
+    month = nov,
       doi = {10.5281/zenodo.35161},
    adsurl = {http://adsabs.harvard.edu/abs/2015PhDT.......193H},
   adsnote = {Provided by the SAO/NASA Astrophysics Data System}
