--- a/documents/ms.tex
+++ b/documents/ms.tex
@@ -13,6 +13,9 @@
 \newcommand{\princeton}{4}
 \newcommand{\naigrain}{333}
 \newcommand{\nmcquillan}{100}
+\newcommand{\kepexample}{1430163}
+\newcommand{\kepexampleperiod}{4}
+\newcommand{\aigrainexampleperiod}{20.8}
 \newcommand{\Kepler}{{\it Kepler}}
 \newcommand{\kepler}{\Kepler}
 \newcommand{\corot}{{\it CoRoT}}
@@ -83,7 +86,7 @@ affine invariant ensemble Markov Chain Monte Carlo (MCMC) sampler {\tt emcee}
 Rotation periods inferred via this method are more precise and accurate than
 the periodogram and ACF methods.
 Furthermore, rotation periods are inferred probabilistically, allowing them to
-be easily incorporated into follow-on studies, inferring stellar ages or
+be easily incorporated into follow-on studies; inferring stellar ages or
 characterising star-planet interactions for example.
 In addition, unlike the sine-fitting periodogram and ACF methods, the
 posterior PDF samples allow for proper characterisation of uncertainties.
@@ -121,9 +124,8 @@ In addition to global stellar parameters such as inclination and rotation
 period, each spot or active region should have (at minimum) a longitude,
 latitude, size, temperature and lifetime.
 Considering that many stars have on the order of hundreds of spots, the number
-of free parameters quickly becomes unwieldy, especially if the posterior
-Probability Density Functions (PDFs) of these parameters are explored with
-MCMC.
+of free parameters quickly becomes unwieldy, especially if the posterior PDFs
+of these parameters are explored with MCMC.
 Simplified spot models, such as the one described in \citet{Lanza2014} where
 only two spots are modelled, have produced successful results, however these
 simplified models sacrifice some precision due to lack of model flexibility.
@@ -158,21 +160,19 @@ An ACF is also an operation performed on the data, not a generative model of
 the data and is therefore not inherently probabilistic.
 For this reason it is very difficult to estimate the uncertainty on an ACF
 rotation period measurement.
-Many rotation periods in the literature have been inferred by measuring the
-position of the first peak in an ACF, however this approach can be dangerous.
-The exponential decay in correlation can shift the peak position short-wards
-of its true value, leading to an underestimate of the period.
-We return to this point in section \textsection \ref{sec:discussion}.
-% In order to avoid this, a period should be inferred by modelling the entire
-% ACF, not just measuring the position of the first peak.
+% Many rotation periods in the literature have been inferred by measuring the
+% position of the first peak in an ACF, however this approach can be dangerous.
+% The exponential decay in correlation can shift the peak position short-wards
+% of its true value, leading to an underestimate of the period.
+% We return to this point in section \textsection \ref{sec:discussion}.
 
 The motivation for developing a GP-based method for rotation period inference
 is, firstly to measure more accurate and precise rotation periods using a
 better-suited generative model than a sinusoid for the reasons explained
 above.
 Secondly, in order to infer {\it probabilistic} periods, i.e. to estimate the
-posterior PDF of the rotation period and thereby measure a realistic and
-representative uncertainty.
+posterior PDF of the rotation period and thereby produce a realistic and
+estimate of its uncertainty.
 Thirdly, to allow for an additional correlated noise model to be included
 during regression, the parameters of which could be marginalised over.
 % And fourthly to provide some way of determining whether a periodic model is
@@ -197,7 +197,7 @@ An in-depth introduction to Gaussian processes is provided by
 GP models parameterise the covariance between data points and a kernel
 function provides the form of covariance matrix parameterisation.
 For example, take the time-series in figure \ref{fig:GP_example}.
-This is the \kepler\ light curve of KIC 1430163, a relatively active star that
+This is the \kepler\ light curve of KIC \kepexample, a relatively active star that
 rotates once every $\sim$ 4 days.
 The stochastic variability in this time-series is typical of \kepler\ FGK
 stars.
@@ -214,7 +214,7 @@ structure of a light curve, whereas a much more complicated one may be
 required to model the time-series itself.
 % The light curve of \Kepler-452 has been modelled with a GP in figure
 % \ref{fig:GP_example}, shown in orange.
-In figure \ref{fig:GP_example} the light curve of KIC 1430163 has been
+In figure \ref{fig:GP_example} the light curve of KIC \kepexample\ has been
 modelled with a GP.
 % Both provide adequate fits to the data, however only the periodic kernel
 % function, `QP' is a useful model because it has a periodic parameter.
@@ -222,7 +222,8 @@ modelled with a GP.
 
 A range of kernel functions could be used to describe stellar variability.
 For example, the simplest and most commonly used kernel function, the `Squared
-Exponential' (SE) produces an adequate fit to the KIC 1430163 light curve.
+Exponential' (SE) produces an adequate fit to the KIC \kepexample\ light
+curve.
 The SE kernel function is defined as,
 \begin{equation}
 k_{i,j} = A \exp \left(-\frac{(x_i - x_j)^2}{2l^2} \right).
@@ -239,9 +240,9 @@ are infinitely differentiable.
 It is therefore possible to model a data set and its derivatives
 simultaneously.
 % \citep[see \eg][]{Rajpaul2015}
-The SE kernel function may be an adequate model of the covariance in stellar
-light curves, but it is not a {\it useful} one for the problem of rotation
-period inference because it does not have a parameter that describes a period.
+The SE kernel function is not a good model of the covariance in stellar light
+curves, nor a {\it useful} one for the problem of rotation period inference
+because it does not capture periodic behaviour.
 In order to infer rotation periods it is necessary to use a periodic kernel
 function.
 For this reason, we use the `Quasi-Periodic' kernel function.
@@ -255,11 +256,31 @@ It is the product of the SE kernel function, which describes the overall
 covariance decay, and an exponentiated, squared, sinusoidal kernel function
 that describes the periodic covariance structure.
 $P$ can be interpreted as the rotation period of the star and $\Gamma$
-controls the amplitude of the sinusoidal term.
+controls the amplitude of the $\sin^2$ term.
+If $\Gamma$ is very small, only points almost exactly one period away are
+tightly correlated and points that are slightly more or less than one period
+away are very loosely correlated.
+If $\Gamma$ is large, points separated by one period are tightly
+correlated and points separated by slightly more or less are still highly
+correlated although less so.
 This kernel function allows two data points that are separated in time by one
 rotation period to be tightly correlated, while points separated by half a
 period can be weakly correlated.
-Both the QP kernel function was used to produce the model shown in figure
+We also use an extra parameter, $\sigma$ which is an additional white noise
+term added to the diagonal elements of the covariance matrix.
+It is the fraction by which the observational uncertainties have been
+underestimated --- if the uncertainties reported on the data are too small,
+this parameter will be non-zero.
+In practice however, this parameter should always be non-zero when performing
+GP regression.
+This is because the covariance matrix must be positive definite, however
+matrix inversion performed using most solvers is approximate, not exact,
+therefore slight deviations from positive definiteness can arise.
+Including a small amount of extra variance in the model allows enough
+flexibility that the matrix inversion algorithms do not run into numerical
+issues.
+
+This QP kernel function was used to produce the model shown in figure
 ~\ref{fig:GP_example}.
 
 In order to infer a stellar rotation period from a light curve, we fit a GP
@@ -269,25 +290,33 @@ in order to find the maximum likelihood value for $P$.
 In this study however, the full posterior PDFs of the parameters are explored
 using MCMC.
 This approach comes at a cost: a GP model is expensive to compute once as it
-requires a matrix inversion and determinant evaluation, let alone the many
-thousands of times that is necessary to fully explore the posteriors of the
-parameters.
-However, fully exploring the posterior PDF of $P$ allows for an accurate
-estimate of the uncertainty on the rotation period.
+requires an inversion and determinant evaluation of the covariance matrix, let
+alone the many thousands of times that is necessary to fully explore the
+posteriors of the parameters.
+Fully exploring the posterior PDF of $P$ is important however, as it provides
+an accurate estimate of the uncertainty on the rotation period.
 
 \begin{figure}
 \begin{center}
 \includegraphics[width=6in, clip=true]{figures/001430163.pdf}
 \caption[A light curve with a GP model.]
-{Light curve of KIC 1430163, an active star with a rotation period of $\sim$ 4
-days.
+{Light curve of KIC \kepexample, an active star with a rotation period of
+$\sim$ \kepexampleperiod\ days.
 The blue line shows a fit to the data using a Gaussian process model with a QP
 covariance kernel function.}
 \label{fig:GP_example}
 \end{center}
 \end{figure}
 
-\section{Rotation period injection and recovery}
+In \textsection \ref{sec:simulations} of this paper we describe the simulated
+light curves used to test rotation period inference methods.
+In \textsection \ref{sec:method} we describe the various methods used to
+recover the rotation periods: the periodogram, ACF and GP methods.
+In \textsection \ref{sec:kepler} we apply our method to real \kepler\ data and
+the results of the paper are discussed in \textsection \ref{sec:discussion}.
+
+\section{Simulated light curves}
+\label{sec:simulations}
 
 In order to test the GP method we attempted to the measure rotation periods of
 a set of simulated light curves.
@@ -316,13 +345,15 @@ one data point every thirty minutes over a four year duration.
 90\% of the rotation periods of the simulations were randomly drawn from a
 log-uniform distribution between 10 and 50 days and 10\% from a log-uniform
 distribution between 1 and 10 days.
+A histogram of the \naigrain\ solid-body rotation periods is shown in figure
+\ref{fig:period_hist}.
 The light curves were also generated with a range of stellar inclination
 angles, activity levels, spot lifetimes and more.
 Once simulated, the light curves were added to real \kepler\ light curves with
 no obvious astrophysical variability in order to preserve the noise properties
 of the time series.
-Figure \ref{fig:demo_lc} shows an example of a simulated, noise-free
-light curve with a period of 17.04 days.
+Figure \ref{fig:demo_lc} shows an example of a simulated light curve with a
+period of \aigrainexampleperiod days.
 
 The ranges and distributions of the physical stellar parameters used in the
 simulated light curves are tabulated below, in table
@@ -351,8 +382,8 @@ in \citet{Aigrain2015}}
 \begin{figure}
 \begin{center}
 \includegraphics[width=6in, clip=true]{figures/period_hist.pdf}
-\caption{A histogram of the rotation periods used to generate the simulated
-light curves in \citet{Aigrain2015}.}
+\caption{A histogram of the rotation periods used to generate the \naigrain\
+simulated light curves in \citet{Aigrain2015}.}
 \label{fig:period_hist}
 \end{center}
 \end{figure}
@@ -361,30 +392,32 @@ light curves in \citet{Aigrain2015}.}
 \begin{center}
 \includegraphics[width=6in, clip=true]{figures/demo_lc.pdf}
 \caption[A simulated light curve.]
-{An example simulated light curve. This `star' has a rotation period of 20.8
-days.}
+{An example simulated light curve. This `star' has a rotation period of
+\aigrainexampleperiod\ days.}
 \label{fig:demo_lc}
 \end{center}
 \end{figure}
 
-We attempted to recover the rotation periods of these \naigrain\ light
-curves using three rotation period recovery methods: the ACF method, the LS
-periodogram method and the GP method.
+% We attempted to recover the rotation periods of these \naigrain\ light curves
+% using three methods: the ACF method; the LS periodogram method; and the GP
+% method, and compared their performances.
 
+\section{Rotation period recovery}
+\label{sec:method}
 \subsection{ACF}
 
 We calculated an ACF for each light curve following the method of
 \citet{Mcquillan2013}.
-In this method, an ACF is calculated for each light curve and smoothed by
-convolving with a Gaussian with $\sigma=9$ days.
+An ACF is calculated for each light curve and smoothed by convolving with a
+Gaussian with $\sigma=9$ days.
 A rotation period is estimated as the lag-time of the highest peak in the ACF,
 less than 100 days.
 This is not always the first peak: the second can be larger than the first if
 there are two active regions at or near opposite longitudes on the surface of
-the star---this would produce a light curve with two dips per rotation period.
+the star---producing a light curve with two dips per rotation period.
 We restrict our search to periods less than 100 days because this is the
 maximum period that is realistically recoverable in \kepler\ light curves ---
-instrumental noise significantly distorts the signal on longer timescales.
+instrumental noise significantly distorts signals on longer timescales.
 An example ACF of the light curve in figure~\ref{fig:demo_lc} is shown
 in figure \ref{fig:demo_acf}.
 
@@ -396,7 +429,7 @@ in figure \ref{fig:demo_acf}.
 \ref{fig:demo_lc}.
 The vertical blue line shows the period measured using the ACF method (20.4
 days) and the pink dashed line shows the period that was used to simulate the
-light curve (20.8 days).}
+light curve (\aigrainexampleperiod\ days).}
 \label{fig:demo_acf}
 \end{center}
 \end{figure}
@@ -421,25 +454,25 @@ curves.
 Periods measured using the ACF method are plotted against the original
 rotation period values used to generate the light curves in figure
 \ref{fig:compare_acf}.
-The $2\times$ and $1/2\times$ harmonic lines are shown as dashed lines.
+The $2n$ and $\frac{1}{2}n$ harmonic lines are shown as dashed lines.
 The RMS scatter about the $x=y$ line for rotation periods measured using the
 ACF method is \acfRMS.
 The agreement between the injected and recovered rotation periods is good in
 general, however twice the true rotation period is often found.
 In addition, some rotation periods are drastically over- and underestimated.
-Of the points clustered close to the $x=y$ line, more slightly below it than
-above it, \ie\ rotation periods are preferentially underestimated.
+Of the points clustered close to the $x=y$ line, more fall slightly below it
+than above it, \ie\ rotation periods are preferentially underestimated.
 This is a feature of the peak position measurement method that is performed on
 the ACF.
-ACFs of stellar light curves are, like the QP kernel function in equation
-\ref{eq:QP}, periodic functions added to decaying exponentials.
+ACFs of stellar light curves are similar to the QP kernel function in equation
+\ref{eq:QP}: periodic functions added to decaying exponentials.
 In such functions the peak positions can be shifted towards the left, the
 short period end, because the decaying exponential raises the left side of
 each peak more than the right.
 It is possible to model this effect, however the standard practice is to
 simply measure the peak position without taking it into account.
 We adopt the standard practice approach here in order to provide a comparison
-between our new method and the current standard procedure.
+between our new method and that used largely in the literature.
 
 \begin{figure*}
 \begin{center}
@@ -451,19 +484,17 @@ curves vs the rotation periods measured using the ACF technique.}
 \end{center}
 \end{figure*}
 
-\subsection{The sine-fitting periodogram method}
+\subsection{LS periodogram}
 
-For each simulated light curve, a Lomb-Scargle (LS) periodogram
-\citep{Lomb1976, Scargle1982} was computed over a grid of 10,000 periods,
-evenly spaced in frequency, between 1 and 100 days\footnote{LS periodograms
-were calculated using the gatspy Python module:
+For each simulated light curve, a LS periodogram
+\footnote{LS periodograms were calculated using the gatspy Python module:
 \url{https://github.com/astroML/gatspy/tree/master/gatspy/periodic}.}
+was computed over a grid of 10,000 periods, evenly spaced in frequency,
+between 1 and 100 days.
 The period of the highest peak in the periodogram was adopted as the rotation
 period.
 The resulting recovered rotation periods are plotted as a function of the true
 periods in figure \ref{fig:pgram_compare}.
-These recovered rotation periods are in general more accurate than the ACF
-results: they do not systematically over or under predict rotation period.
 The RMS scatter for rotation periods measured using the LS periodogram
 technique is \pgramRMS.
 The longer-period measurements provide the dominant contribution to this RMS.
@@ -605,20 +636,6 @@ timescales than this and in practice we found that if $l$ is unrestricted, it
 can occasionally wander towards a small value, resulting in an incorrect
 rotation period estimate.
 
-$\sigma$ is an additional white noise term added to the diagonal elements of
-the covariance matrix. It is the fraction by which the observational
-uncertainties have been underestimated.
-If the uncertainties reported on the data are too small, this parameter will
-be non-zero.
-In practice however, this parameter should always be non-zero when performing
-GP regression.
-This is because the covariance matrix must be positive definite, however
-matrix inversion performed using most solvers is approximate, not exact,
-therefore slight deviations from positive definiteness can arise.
-Including a small amount of extra variance in the model allows enough
-flexibility that the matrix inversion algorithms do not run into numerical
-issues.
-
 We subsampled the light curves in order to reduce computation time.
 We randomly subsampled the data, retaining an average of four data points per
 day.
@@ -674,7 +691,8 @@ The true rotation period of this star is ... ($\exp(...)$) days.}
 \end{center}
 \end{figure*}
 
-\subsection{Real \kepler\ data}
+\section{Real \kepler\ data}
+\label{sec:kepler}
 
 We applied our method to \nmcquillan\ stars with rotation periods previously
 measured by \citet{Mcquillan2014}.
