cleaned up formatting of acf output table

--- a/notebooks_tdm/summary.ipynb
+++ b/notebooks_tdm/summary.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -19,10 +19,38 @@
     "df = summarize_fits(resultsdir, truths='aigrain')\n",
     "df = df.join(AigrainTruths().df)\n",
     "\n",
-    "df_acf = pd.read_table('../acf_all.txt', delim_whitespace=True, index_col=0,\n",
-    "                      names=['i','acf_prot','acf_height'])\n",
-    "df_acf = df_acf.join(AigrainTruths().df)\n",
-    "df_acf = df_acf.dropna()"
+    "df_acf = pd.read_table('../acf_all.txt', delim_whitespace=True, index_col=0)\n",
+    "df_acf = df_acf.join(AigrainTruths().df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index([u'prot_5', u'height_5', u'tau_5', u'quality_5', u'prot_10',\n",
+       "       u'height_10', u'tau_10', u'quality_10', u'prot_30', u'height_30',\n",
+       "       u'tau_30', u'quality_30', u'prot_50', u'height_50', u'tau_50',\n",
+       "       u'quality_50', u'prot_100', u'height_100', u'tau_100', u'quality_100',\n",
+       "       u'N', u'AR', u'CLEN', u'COVER', u'LMIN', u'LMAX', u'R', u'SINI', u'PEQ',\n",
+       "       u'PPOL', u'A_MED', u'TAU', u'NSPOT', u'DELTA_OMEGA', u'DELTA_OMEGA_REL',\n",
+       "       u'OMEGA_EQ', u'OMEGA_POL', u'OMEGA_MIN', u'OMEGA_MAX', u'P_MIN',\n",
+       "       u'P_MAX', u'AMP', u'KID'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_acf.columns"
    ]
   },
   {
